relm-derive/tests/ui/widget-attribute/empty-view-macro.stderr
error: unexpected end of input, expected one of: string literal, identifier, `#`
  --> $DIR/empty-view-macro.rs:12:11
   |
12 |     view! {}
   |           ^^
